--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							</li>
 
 							<li>
-								<a href="https://twitter.com/">
+								<a href="https://m.twitter.com/">
 									Twitter
 								</a>
 							</li>
